Updates on upload item, item mamangement.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -165,6 +165,15 @@ page.title.item.management = Item Management
 item.management.header = Item Management
 item.management.sub.header = From this view you can manage your item
 
+item.management.overview.photos.header = Item Photos
+item.management.overview.basic.information.header = Basic Information
+item.management.shipping.information.header = Shipping Information
+item.management.photos.information.header = Photos Information
+
+user.message.image.limitations = Please, keep in mind the following limitations when uploading photos.
+user.message.max.images.allowed = You may upload up to 10 photos per item.
+user.message.image.max.size = A photo's max size cannot exceed 1MB.
+user.message.image.format.allowed = Allowed file formats are JPG, JPEG, PNG and GIF.
 
 # Upload item flow
 upload.item.flow.step.information = Item Information
@@ -187,6 +196,7 @@ button.label.yes = Yes
 button.label.next = Next
 button.label.previous = Previous
 button.label.delete = Delete
+button.label.remove = Remove
 
 # Form fields
 form.field.first.name = First Name
