Upgrade of item upload flow.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -80,6 +80,8 @@ user.message.item.not.found = Item could not be found!
 user.message.item.update.success = Item was updated successfully.
 user.message.item.update.failed = Failed to update item.
 user.message.feeling.social = Feeling Social
+user.message.item.upload.validation.required = Thanks for uploading! We' ll review your item and let you know when it will be visible.
+user.message.item.upload.review.required = Thanks for uploading your item {0} in your swap shop. Soon the SwappyBees team will review it, until then your item is not visible to other users.
 
 # User questions
 user.message.question.are.you.sure = Are you sure?
@@ -160,6 +162,10 @@ swap.shop.button.label.upload.item = Upload<br> New Item
 
 swap.shop.item.uploaded.on = Uploaded on {0}
 
+item.detailed.summary.product = Product Summary
+item.detailed.summary.details = Product Details
+item.detailed.summary.shipping = Shipping
+
 # Item management
 page.title.item.management = Item Management
 item.management.header = Item Management
@@ -174,6 +180,7 @@ user.message.image.limitations = Please, keep in mind the following limitations 
 user.message.max.images.allowed = You may upload up to 10 photos per item.
 user.message.image.max.size = A photo's max size cannot exceed 1MB.
 user.message.image.format.allowed = Allowed file formats are JPG, JPEG, PNG and GIF.
+user.message.designer.not.applied = Designer information not provided.
 
 # Upload item flow
 upload.item.flow.step.information = Item Information
@@ -226,7 +233,7 @@ form.field.exchange.type = Exchange Type
 form.field.item.price = Price (&euro;)
 form.field.item.shipping.info = Shipping & Returns
 form.field.no.costs.label = No costs applied
-form.field.shipping.costs = Shipping Costs
+form.field.shipping.costs = Shipping Costs (&euro;)
 form.field.no.shipping.costs.applied = No shipping costs applied.
 form.field.total.buy.value = Total Buy Value (&euro;)
 
