--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -190,6 +190,19 @@ upload.item.flow.step.shipping = Shipping Information
 upload.item.flow.step.photos = Upload Photos
 upload.item.flow.step.verification = Verification
 
+# Wallet Management
+page.title.wallet.management = Wallet Management
+wallet.management.header = Wallet Management
+wallet.management.sub.header = From this view you can manage your wallet
+
+wallet.management.status = Wallet Status
+wallet.management.transactions.list = Transactions
+
+user.message.top.up.account = If you wish to top up your account please click on <strong>Top Up Account</strong> above.
+user.message.no.wallet.transactions = You have not performed any transactions.
+
+button.label.top.up = Top Up Account
+
 # Button labels
 button.label.search = Search
 button.label.update = Update
@@ -236,6 +249,9 @@ form.field.no.costs.label = No costs applied
 form.field.shipping.costs = Shipping Costs (&euro;)
 form.field.no.shipping.costs.applied = No shipping costs applied.
 form.field.total.buy.value = Total Buy Value (&euro;)
+form.field.available.points = Available Points
+form.field.reserved.points = Reserved Points
+form.field.consumed.points = Consumed Points
 
 
 # Form input fields placeholders
