Updated top up account flow.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -82,6 +82,7 @@ user.message.item.update.failed = Failed to update item.
 user.message.feeling.social = Feeling Social
 user.message.item.upload.validation.required = Thanks for uploading! We' ll review your item and let you know when it will be visible.
 user.message.item.upload.review.required = Thanks for uploading your item {0} in your swap shop. Soon the SwappyBees team will review it, until then your item is not visible to other users.
+user.message.price.for.points = You receive <strong>{0} points</strong> for <br><strong>{1} &euro;</strong>.
 
 # User questions
 user.message.question.are.you.sure = Are you sure?
@@ -203,6 +204,24 @@ user.message.no.wallet.transactions = You have not performed any transactions.
 
 button.label.top.up = Top Up Account
 
+# Top up account flow
+top.up.scheme.selection.header = Top Up Scheme Selection <br><small>Please, select which top up scheme suits you better</small>
+top.up.payment.selection.header = Top Up Payment Selection <br><small>Please, select which payment method suits you better</small>
+top.up.verify.selection.header = Top Up Verify Selection <br><small>Please, verify that all information below are correct</small>
+
+top.up.scheme.selection = Top Up Scheme
+top.up.payment.selection = Payment Method
+top.up.selection.verification = Verification
+
+user.message.redirection.occuring = By clicking on <button class="btn btn-primary btn-xs disabled"><span class="glyphicon glyphicon-chevron-right"></span> <span class="hidden-xs">Redirect</span></button> below you will be redirected to PayPal's authentication system in order to confirm your purchase.
+
+top.up.payment.method.selected = Payment method selected information
+top.up.scheme.selected = Top Up scheme selected information
+
+user.message.select.top.up.scheme = Please, select a top up scheme to proceed.
+user.message.select.payment.method = Please, select a payment method to proceed.
+
+
 # Button labels
 button.label.search = Search
 button.label.update = Update
@@ -217,6 +236,7 @@ button.label.next = Next
 button.label.previous = Previous
 button.label.delete = Delete
 button.label.remove = Remove
+button.label.redirect = Redirect
 
 # Form fields
 form.field.first.name = First Name
@@ -252,6 +272,9 @@ form.field.total.buy.value = Total Buy Value (&euro;)
 form.field.available.points = Available Points
 form.field.reserved.points = Reserved Points
 form.field.consumed.points = Consumed Points
+form.field.points = Points
+form.field.amount = Amount
+form.field.top.scheme = Top Up Scheme
 
 
 # Form input fields placeholders
@@ -281,3 +304,6 @@ item.status.type.unavailable = Unavailable
 # Item Visibility Type
 item.visibility.type.visible = Visible
 item.visibility.type.hidden = Hidden
+
+# Payment Type
+payment.type.paypal = PayPal
