Updating category management.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -73,6 +73,7 @@ user.message.payment.method.created = New payment method created successfully.
 user.message.payment.method.not.found = Payment method not found.
 user.message.payment.method.deleted = Payment method deleted successfully.
 user.message.main.payment.method.not.set = Failed to change main payment method.
+user.message.payment.method.required = In order to <strong>Top Up</code> your account or participate in any requests as a <strong>Buyer</strong> or a <strong>Seller</strong> you need to provide a valid payment method. Do so now by clicking below.
 user.message.no.paypal.account = In order to upload an item for <strong>Sell</strong> or <strong>Swap or Sell</strong>, you have to submit at least one payment method in your profile.
 user.message.social.network.invalid = Social network type defined is invalid.
 user.message.profile.picture.updated.successfully = Profile picture updated successfully from <strong>{0}</strong>.
@@ -98,6 +99,7 @@ user.menu.notifications = Notifications (<span style="color: darkorange">{0}</sp
 user.menu.messages = Messages
 user.menu.new.messages.number = (<span style="color: darkorange">{0}</span>)
 user.menu.logout = Logout
+user.menu.administration = Administration
 user.menu.welcome.message = Welcome <span style="color: darkorange">{0} {1}</span>
 
 # Account menu
@@ -237,6 +239,7 @@ button.label.previous = Previous
 button.label.delete = Delete
 button.label.remove = Remove
 button.label.redirect = Redirect
+button.label.payment.method.management = Payment Methods
 
 # Form fields
 form.field.first.name = First Name
