--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -206,6 +206,20 @@ user.message.no.wallet.transactions = You have not performed any transactions.
 
 button.label.top.up = Top Up Account
 
+# Search criteria panel
+search.criteria.panel.header = Search Criteria
+
+search.criteria.condition.state = Item Condition State
+search.criteria.exchange.type = Item Exchange Type
+search.criteria.sell.price = Price Range
+search.criteria.sort.by.date = Upload Date
+
+search.criteria.sell.price.from = Price Range From
+search.criteria.sell.price.to = Price Range To
+search.criteria.newest.to.oldest = From Newest
+search.criteria.oldest.to.newest = From Oldest
+search.criteria.any = Any
+
 # Top up account flow
 top.up.scheme.selection.header = Top Up Scheme Selection <br><small>Please, select which top up scheme suits you better</small>
 top.up.payment.selection.header = Top Up Payment Selection <br><small>Please, select which payment method suits you better</small>
@@ -240,6 +254,7 @@ button.label.delete = Delete
 button.label.remove = Remove
 button.label.redirect = Redirect
 button.label.payment.method.management = Payment Methods
+button.label.show = Show
 
 # Form fields
 form.field.first.name = First Name
@@ -291,6 +306,11 @@ form.field.input.exchange.type = Select exchange type
 
 
 # Enumerations
+
+# Yes No Type
+yes.no.type.yes = Yes
+yes.no.type.no = No
+
 # Item Exchange Type
 item.exchange.type.swap = Swap
 item.exchange.type.sell = Sell
@@ -298,7 +318,7 @@ item.exchange.type.swaporsell = Swap Or Sell
 
 # Item Condition Type
 item.condition.type.new = New
-item.condition.type.used = Old
+item.condition.type.used = Used
 
 # Item Status Type
 item.status.type.available = Available
