--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -121,6 +121,9 @@ swap.shop.menu.notifications = Notifications
 item.menu.view = View
 item.menu.requests = Requests
 item.menu.delete = Delete
+item.menu.swap = Swap
+item.menu.buy = Buy
+item.menu.conversation = Conversation
 
 item.menu.overview = Overview
 item.menu.basic.information = Basic Information
