Updates regarding item overview.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -84,6 +84,7 @@ user.message.feeling.social = Feeling Social
 user.message.item.upload.validation.required = Thanks for uploading! We' ll review your item and let you know when it will be visible.
 user.message.item.upload.review.required = Thanks for uploading your item {0} in your swap shop. Soon the SwappyBees team will review it, until then your item is not visible to other users.
 user.message.price.for.points = You receive <strong>{0} points</strong> for <br><strong>{1} &euro;</strong>.
+user.message.login.to.start.request = In order to initiate a swap or buy request you have to login first.
 
 # User questions
 user.message.question.are.you.sure = Are you sure?
@@ -187,6 +188,11 @@ user.message.max.images.allowed = You may upload up to 10 photos per item.
 user.message.image.max.size = A photo's max size cannot exceed 1MB.
 user.message.image.format.allowed = Allowed file formats are JPG, JPEG, PNG and GIF.
 user.message.designer.not.applied = Designer information not provided.
+
+# Item overview
+item.overview.swap.request.initiator = Create Swap Request
+item.overview.monetary.request.initiator = Create Buy Request
+item.overview.conversation.request.initiator = Start Conversation
 
 # Upload item flow
 upload.item.flow.step.information = Item Information
