Further update on item overview.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -180,6 +180,7 @@ item.management.sub.header = From this view you can manage your item
 
 item.management.overview.photos.header = Item Photos
 item.management.overview.basic.information.header = Basic Information
+item.management.overview.details.information.header = Details Information
 item.management.shipping.information.header = Shipping Information
 item.management.photos.information.header = Photos Information
 
@@ -190,9 +191,9 @@ user.message.image.format.allowed = Allowed file formats are JPG, JPEG, PNG and 
 user.message.designer.not.applied = Designer information not provided.
 
 # Item overview
-item.overview.swap.request.initiator = Create Swap Request
-item.overview.monetary.request.initiator = Create Buy Request
-item.overview.conversation.request.initiator = Start Conversation
+item.overview.swap.request.initiator = Create <br>Swap Request
+item.overview.monetary.request.initiator = Create <br>Buy Request
+item.overview.conversation.request.initiator = Start <br>Conversation
 
 # Upload item flow
 upload.item.flow.step.information = Item Information
