--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -191,9 +191,9 @@ user.message.image.format.allowed = Allowed file formats are JPG, JPEG, PNG and 
 user.message.designer.not.applied = Designer information not provided.
 
 # Item overview
-item.overview.swap.request.initiator = Create <br>Swap Request
-item.overview.monetary.request.initiator = Create <br>Buy Request
-item.overview.conversation.request.initiator = Start <br>Conversation
+item.overview.swap.request.initiator = Create Swap Request
+item.overview.monetary.request.initiator = Create Buy Request
+item.overview.conversation.request.initiator = Start Conversation
 
 # Upload item flow
 upload.item.flow.step.information = Item Information
